--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 .topnav {
   background-color: #333;
   overflow: hidden;
+  position: relative;
+ top: -20px" 
 }
 body {
   background: rgb(71, 71, 71);
@@ -14,6 +16,20 @@ body {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+}
+#header{
+  position: relative;
+      bottom:10px;
+      font-size:1.1em;font-family: Arial, Helvetica, sans-serif;text-align:center;font-weight:bolder;color: rgb(0, 42, 255);
+}
+#head{
+
+        font-size: 1.35em;
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+        font-weight: bolder;
+        color: aqua;
+      
 }
 
 /* Change the color of links on hover */
